# GeradorPacotesMV

./: .gitignore  Readme.md  gerador.py  index.html  main.py  migration.MD  package-lock.json  package.json
services/: home_services.py  process_service.py  utils.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  process.rs  repo.rs
src-tauri/src/models/: artefact.rs  mod.rs
src/components/: ArtefactSelector.tsx  CodeInputs.tsx  FolderInfo.tsx  ProcessDialog.tsx  RepoSelector.tsx  SelectedList.tsx
src/components/ui/: badge.tsx  input.tsx  popover.tsx  progress.tsx  select.tsx
src/types/: artefact.ts
ui/: home.py  log_window.py  process.py
