[package]
name = "app-tauri"
version = "0.1.0"
description = "Gerador de Pacotes HTML5"
authors = ["you"]
edition = "2021"

[lib]
name = "app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
